--- a/{{ cookiecutter.repo_name }}/pyproject.toml
+++ b/{{ cookiecutter.repo_name }}/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "{{ cookiecutter.repo_name }}"
 authors = [
-    { name = '{cookiecutter.author_name}', email = '{cookiecutter.author_email}' },
+    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
 ]
-description = '{{ cookiecutter.description }}'
+description = "{{ cookiecutter.description }}"
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}" }
